code-agent/argo/oauth-proxy-resources.yaml
# OAuth Proxy Resources for Argo Server
#
# This file contains all resources needed for OAuth Proxy authentication.
# The setup-oauth-proxy.sh script will:
#   1. Generate a random cookie secret
#   2. Apply these resources with the secret substituted
#
# Prerequisites:
#   - OpenShift cluster with OAuth configured
#   - Argo Server deployed in 'argo' namespace
#   - kubectl access to the cluster

---
# Update Service to use OAuth Proxy port and request TLS certificate
# The annotation triggers OpenShift service-ca to generate TLS cert
apiVersion: v1
kind: Service
metadata:
  name: argo-server
  namespace: argo
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: argo-server-tls
spec:
  ports:
    - name: oauth-proxy
      port: 8443
      targetPort: 8443
      protocol: TCP
  selector:
    app: argo-server
  type: ClusterIP

---
# Update Route to use OAuth Proxy port with reencrypt TLS
# Note: Host will be auto-assigned by OpenShift if not specified
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: argo-server
  namespace: argo
spec:
  port:
    targetPort: oauth-proxy
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: argo-server
    weight: 100
